...
    fun validarLogin(): Boolean {
        val st = _estadoLogin.value
        var emailErr: String? = null
        var passErr: String? = null

        if (st.email.isBlank()) emailErr = "El correo es obligatorio"
        else if (!st.email.contains("@")) emailErr = "Formato de correo inválido"

        if (st.password.length < 6) passErr = "Mínimo 6 caracteres"

        val ok = (emailErr == null && passErr == null)
        if (!ok) {
            _estadoLogin.value = st.copy(
                errores = ErroresLogin(email = emailErr, password = passErr)
            )
...
